test/testdata/functions/missing_4_args_error.lox
fun add(a, b, c, d) {
  print a + b + c + d;
}

add(); // error: add() accepts 4 arguments but 0 were given
